@@ -1,6 +1,6 @@
 .\" Manpage for valentina.
 .\" Contact dismine@gmail.com to correct errors.
-.TH valentina 1 "21 March, 2020" "valentina man page"
+.TH valentina 1 "22 March, 2020" "valentina man page"
 .SH NAME
 Valentina \- Pattern making program.
 .SH SYNOPSIS
@@ -218,9 +218,9 @@ The path to output destination folder. By default the directory at which the app
 .IP "--yscale <Vertical scale>"
 .RB "Set vertical scale factor from 0.01 to 3.0 (default = 1.0, " "export mode" ")."
 .IP "--followGrainline"
-.RB "Order detail to follow grainline direction (" "export mode" ").
+.RB "Order detail to follow grainline direction (" "export mode" ")."
 .IP "--manualPriority"
-.RB "Follow manual priority over priority by square (" "export mode" ").
+.RB "Follow manual priority over priority by square (" "export mode" ")."
 .IP "--nestQuantity"
 .RB "Nest quantity copies of each piece (" "export mode" ").
 .IP "-c, --crop"
@@ -229,6 +229,8 @@ The path to output destination folder. By default the directory at which the app
 .RB "Auto crop unused width (" "export mode" ")."
 .IP "-u, --unite"
 .RB "Unite pages if possible (" "export mode" "). Maximum value limited by QImage that supports only a maximum of " "32768x32768 px" " images."
+.IP "--preferOneSheetSolution"
+.RB "Prefer one sheet layout solution (" "export mode" ")."
 .IP "-S, --savelen"
 .RB "Save length of the sheet if set (" "export mode" "). The option tells the program to use as much as possible width of sheet. Quality of a layout can be worse when this option was used."
 .IP "-l, --layounits <The unit>"
