@@ -130,6 +130,7 @@ extern const QString LONG_OPTION_FOLLOW_GRAINLINE;
 extern const QString LONG_OPTION_MANUAL_PRIORITY;
 extern const QString LONG_OPTION_LANDSCAPE_ORIENTATION;
 extern const QString LONG_OPTION_NEST_QUANTITY;
+extern const QString LONG_OPTION_PREFER_ONE_SHEET_SOLUTION;
 
 QStringList AllKeys();
 
