@@ -45,6 +45,7 @@
 - Export pattern to DXF-ASTM.
 - [smart-pattern/valentina#18] Auto-created Visibility Group for group operation.
 - Setting scale factor for export and print.
+- New layout generator option: Prefer one sheet solution.
 
 # Version 0.6.2 (unreleased)
 - [#903] Bug in tool Cut Spline path.
